logs_tsvc/s175.log
[RunLogger] 运行日志目录: /home/hanning/comet/runs/2026-07-14_00-56-12_tsvc_s175
  Dataset type: tsvc
============================================================
COMET agent: s175  max_steps=5
============================================================

[Evidence collection -- one-time analysis]
  IR extraction failed: Clang -emit-llvm failed: /home/hanning/comet/TSVC_shim/kernels/s175/s175.c:12:25: error: expected ';' after top level declarator
int kernel_s175(int inc)
                        ^
                        ;
/home/hanning/comet/TSVC_shim/kernels/s175/s175.c:55:28: warning: incompatible pointer to integer conversion passing 's
Evidence collection failed (IR extraction error?)
